--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==2.3.3
 pypdf==3.17.0
-Pillow==10.0.0
+Pillow==10.4.0
 pytesseract==0.3.10
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
-torch==2.1.0
+torch==2.0.0  # CHANGED from 2.1.0 to 2.0.0
+torchvision==0.15.0
 openai-whisper==20231117
 numpy==1.24.3
+transformers==4.28.1
